# pushkind-emailer

./: .gitignore  Cargo.toml  app.db  diesel.toml
.github/workflows/: deploy_dev.yml
migrations/2025-03-03-150455_create_users_table/: up.sql
migrations/2025-03-06-105955_create_hub/: down.sql  up.sql
migrations/2025-03-06-184520_create_recipients_table/: down.sql  up.sql
migrations/2025-03-07-114936_create_email_table/: down.sql  up.sql
migrations/2025-03-08-055512_create_unique_constraints/: up.sql
migrations/2025-03-10-101604_create/: down.sql  up.sql
migrations/2025-03-11-114852_add_is_sent_to_email_recipients/: down.sql  up.sql
migrations/2025-03-11-183343_add_subject_column/: down.sql  up.sql
migrations/2025-03-12-130718_create_optional_recipient_fields/: down.sql  up.sql
migrations/2025-03-17-121340_add_imap_support/: down.sql  up.sql
migrations/2025-03-25-182259_add_unsubscribed_column/: down.sql  up.sql
migrations/2025-04-16-130951_add_attachement_column/: down.sql  up.sql
migrations/2025-04-20-174004_add_recipient_active_column/: down.sql  up.sql
migrations/2025-04-20-174233_add_hub_email_template_column/: down.sql  up.sql
migrations/2025-04-21-114048_remove_recipient_active/: down.sql  up.sql
migrations/2025-05-08-100327_add_email_stat_columns/: down.sql  up.sql
migrations/2025-06-26-122713_drop_users/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  middleware.rs  repository.rs  schema.rs  utils.rs
src/forms/: auth.rs  groups.rs  main.rs  mod.rs  recipients.rs  settings.rs
src/models/: alert.rs  auth.rs  config.rs  email.rs  hub.rs  mod.rs  recipient.rs  user.rs  zmq.rs
src/repository/: email.rs  hub.rs  mod.rs  recipient.rs  traits.rs  user.rs
src/routes/: auth.rs  files.rs  groups.rs  main.rs  mod.rs  recipients.rs  settings.rs
templates/: base.html  markdown.html  navigation.html
templates/auth/: login.html  register.html
templates/files/: files.html
templates/groups/: groups.html
templates/main/: email.html  index.html  navigation.html  recipients.html  send_email_form.html  settings.html
templates/recipients/: modal_body.html  recipients.html
templates/settings/: settings.html
