[package]
name = "pushkind-emailer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-identity = "0.8.0"
actix-web = "4.9.0"
lazy_static = "1.5.0"
serde = { version = "1.0.218", features = ["derive"] }
tera = "1.20.0"
actix-service = "2.0.2"
futures-util = "0.3.31"
diesel = { version = "2.2.8", features = ["sqlite", "r2d2", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
actix-files = "0.6.6"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4.26"
actix-multipart = "0.7.2"
csv = "1.3.1"
