[package]
name = "pushkind-emailer"
version = "0.1.0"
edition = "2024"
default-run = "pushkind-emailer"

[features]
send-email = ["mail-send", "tokio"]

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-identity = "0.8.0"
actix-web = "4.10.2"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
futures-util = "0.3.31"
diesel = { version = "2.2.8", features = ["sqlite", "r2d2", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.11.7"
actix-files = "0.6.6"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4.26"
actix-multipart = "0.7.2"
csv = "1.3.1"
zmq = "0.10.0"
mail-send = { version = "0.5.0", optional = true }
serde_html_form = "0.2.7"
tokio = { version = "1.44.0", features = ["full"], optional = true }

[[bin]]
name = "send_email"
required-features = ["send-email"]
