[package]
name = "pushkind-emailer"
version = "0.1.0"
edition = "2024"
default-run = "pushkind-emailer"

[features]
send-email = ["mail-send", "tokio", "imap", "native-tls"]

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-identity = "0.8.0"
actix-web = "4.11.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tera = { version = "1.20.0", features = ["builtins"] }
futures-util = "0.3.31"
diesel = { version = "2.2.10", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
actix-files = "0.6.6"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
actix-multipart = "0.7.2"
csv = "1.3.1"
zmq = "0.10.0"
mail-send = { version = "0.5.1", optional = true }
serde_html_form = "0.2.7"
tokio = { version = "1.45.1", features = ["full"], optional = true }
imap = { version = "2.4.1", optional = true }
native-tls = { version = "0.2.14", optional = true }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
jsonwebtoken = "9.3.1"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }

[[bin]]
name = "send_email"
required-features = ["send-email"]

[[bin]]
name = "check_reply"
required-features = ["send-email"]
